@@ -1333,310 +1333,14 @@ void SurfaceInspector::ApplyFlags()
   Select_SetFlags(ContentsFlagsValue(surfaceflags, contentflags, value, true));
 }
 
-struct Texturable {
-	BrushInstance* _brushInstance;
-	Patch* _patch;
-	Face* _face;
-};
-
-
-bool Face_getClosest(Face& face, SelectionTest& test, SelectionIntersection& bestIntersection, Texturable& texturable)
-{
-  SelectionIntersection intersection;
-  face.testSelect(test, intersection);
-  if(intersection.valid()
-    && SelectionIntersection_closer(intersection, bestIntersection))
-  {
-    bestIntersection = intersection;
-    return true;
-  }
-  return false;
-}
-
-
-class OccludeSelector : public Selector
-{
-  SelectionIntersection& m_bestIntersection;
-  bool& m_occluded;
-public:
-  OccludeSelector(SelectionIntersection& bestIntersection, bool& occluded) : m_bestIntersection(bestIntersection), m_occluded(occluded)
-  {
-    m_occluded = false;
-  }
-  void pushSelectable(Selectable& selectable)
-  {
-  }
-  void popSelectable()
-  {
-  }
-  void addIntersection(const SelectionIntersection& intersection)
-  {
-    if(SelectionIntersection_closer(intersection, m_bestIntersection))
-    {
-      m_bestIntersection = intersection;
-      m_occluded = true;
-    }
-  }
-};
-
-class BrushGetClosestFaceVisibleWalker : public scene::Graph::Walker
-{
-  SelectionTest& m_test;
-  Texturable& m_texturable;
-  mutable SelectionIntersection m_bestIntersection;
-public:
-  BrushGetClosestFaceVisibleWalker(SelectionTest& test, Texturable& texturable) : m_test(test), m_texturable(texturable)
-  {
-  	m_texturable._face = NULL;
-	m_texturable._brushInstance = NULL;
-	m_texturable._patch = NULL;
-  }
-  bool pre(const scene::Path& path, scene::Instance& instance) const
-  {
-    if(path.top().get().visible())
-    {
-      BrushInstance* brush = Instance_getBrush(instance);
-      if(brush != 0)
-      {
-      	m_test.BeginMesh(brush->localToWorld());
-
-        for(Brush::const_iterator i = brush->getBrush().begin(); i != brush->getBrush().end(); ++i)
-        {
-        	// If something was found, save the according brush
-          if (Face_getClosest(*(*i), m_test, m_bestIntersection, m_texturable)) {
-          	 m_texturable._face = (*i);
-			 m_texturable._brushInstance = brush;
-			 m_texturable._patch = NULL;
-          }
-        }
-      }
-      else
-      {
-        SelectionTestable* selectionTestable = Instance_getSelectionTestable(instance);
-        if(selectionTestable)
-        {
-          bool occluded;
-          OccludeSelector selector(m_bestIntersection, occluded);
-          selectionTestable->testSelect(selector, m_test);
-          if(occluded)
-          {
-            Patch* patch = Node_getPatch(path.top());
-            if(patch != 0)
-            {
-              m_texturable._brushInstance = NULL;
-              m_texturable._face = NULL;
-			  m_texturable._patch = patch;
-            }
-            else
-            {
-              m_texturable = Texturable();
-            }
-          }
-        }
-      }
-    }
-    return true;
-  }
-};
-
-Texturable Scene_getClosestTexturable(scene::Graph& graph, SelectionTest& test)
-{
-  Texturable texturable;
-  graph.traverse(BrushGetClosestFaceVisibleWalker(test, texturable));
-  return texturable;
-}
-
-class TextureClipBoard
-{
-public:
-  TextureProjection _projection;
-  ContentsFlagsValue _flags;
-  BrushInstance* _brushInstance;
-  Patch* _patch;
-  Face* _face;
-};
-
-TextureClipBoard g_faceTextureClipboard;
-
-//bool Scene_getClosestTexture(scene::Graph& graph, SelectionTest& test, CopiedString& shader, TextureProjection& projection, ContentsFlagsValue& flags)
-bool Scene_getClosestTexture(scene::Graph& graph, SelectionTest& test, std::string& shader, TextureClipBoard& clipBoard) {
-  	Texturable texturable = Scene_getClosestTexturable(graph, test);
-  	
-  	clipBoard._face = NULL;
-  	clipBoard._brushInstance = NULL;
-  	clipBoard._patch = NULL;
-  	
-	// Check if we have a brush
-	if (texturable._brushInstance != NULL && texturable._face != NULL) {
-		clipBoard._brushInstance = texturable._brushInstance;
-		clipBoard._face = texturable._face;
-		
-	  	shader = texturable._face->GetShader();
-	 	texturable._face->GetTexdef(clipBoard._projection);
-	 	clipBoard._flags = texturable._face->getShader().m_flags;
-		return true;
-	}
-	else if (texturable._patch != NULL) {
-		shader = texturable._patch->GetShader();
-		clipBoard._projection = TextureProjection(TexDef(), BrushPrimitTexDef(), Vector3(0, 0, 0), Vector3(0, 0, 0));
-		clipBoard._flags = ContentsFlagsValue(0, 0, 0, false);
-		clipBoard._patch = texturable._patch;
-		return true;
-	}
-	
-	return false;
-}
-
-void Scene_setClosestTexture(scene::Graph& graph, SelectionTest& test, const std::string& shader, const TextureClipBoard& clipBoard, const bool& project) {
-	Texturable texturable = Scene_getClosestTexturable(graph, test);
-  
-	// Check if we have a brush to copy from
-	if (clipBoard._brushInstance != NULL && clipBoard._face != NULL) {
-		
-		// Copy brush >> brush?
-  		if (texturable._brushInstance != NULL && texturable._face != NULL) {
-		 	texturable._face->SetShader(shader);
-		 	texturable._face->SetTexdef(clipBoard._projection);
-		 	texturable._face->SetFlags(clipBoard._flags);
-		}
-		// Copy brush >> patch?
-		else if (texturable._patch != NULL) {
-		 	texturable._patch->SetShader(shader);
-		 	
-		 	if (project) {
-		 		texturable._patch->pasteTextureProjected(clipBoard._face);
-		 	}
-		 	else {
-		 		texturable._patch->pasteTextureNatural(clipBoard._face);
-		 	}
-		}
-	}
-	// or a patch to copy from
-	else if (clipBoard._patch != NULL) {
-		
-  		// Copy patch >> brush?
-  		if (texturable._brushInstance != NULL && texturable._face != NULL) {
-		 	texturable._face->SetShader(shader);
-		 	texturable._face->SetTexdef(clipBoard._projection);
-		 	texturable._face->SetFlags(clipBoard._flags);
-		}
-		// Copy patch >> patch?
-		else if (texturable._patch != NULL) {
-		 	texturable._patch->SetShader(shader);
-		 	texturable._patch->pasteTextureNatural(*clipBoard._patch);
-		}
-	}
-}
-
-void Scene_setClosestTextureCoordinates(scene::Graph& graph, SelectionTest& test, const TextureClipBoard& clipBoard) {
-	Texturable texturable = Scene_getClosestTexturable(graph, test);
-  
-	// Check if we have a brush to copy from
-	if (clipBoard._brushInstance != NULL && clipBoard._face != NULL) {
-		// Nothing to do yet, this only works for patches
-		gtkutil::errorDialog("Can't copy Texture Coordinates from brushes.",
-							 MainFrame_getWindow());
-	}
-	// or a patch to copy from
-	else if (clipBoard._patch != NULL) {
-  		// Copy patch >> brush?
-  		if (texturable._brushInstance != NULL && texturable._face != NULL) {
-		 	// Nothing to do, this works for patches only, perhaps in the future...
-		 	gtkutil::errorDialog("Can't paste Texture Coordinates from patches to brushes.",
-							 MainFrame_getWindow());
-		}
-		// Copy patch >> patch?
-		else if (texturable._patch != NULL) {
-			// Check if the dimensions match, emit an error otherwise 
-			if (texturable._patch->getWidth() == clipBoard._patch->getWidth() && 
-				texturable._patch->getHeight() == clipBoard._patch->getHeight()) 
-			{
-		 		texturable._patch->pasteTextureCoordinates(clipBoard._patch);
-			}
-			else {
-				gtkutil::errorDialog("Can't paste Texture Coordinates.\nTarget patch dimensions must match.",
-							 MainFrame_getWindow());
-			}
-		}
-	}
-}
-
-void FaceTextureClipboard_setDefault()
-{
-  g_faceTextureClipboard._flags = ContentsFlagsValue(0, 0, 0, false);
-  g_faceTextureClipboard._projection.constructDefault();
-  g_faceTextureClipboard._brushInstance = NULL;
-  g_faceTextureClipboard._patch = NULL;
-  g_faceTextureClipboard._face = NULL;
-}
-
-void TextureClipboard_textureSelected(const char* shader)
-{
-  FaceTextureClipboard_setDefault();
-}
-
-class TextureBrowser;
+/*class TextureBrowser;
 extern TextureBrowser g_TextureBrowser;
 void TextureBrowser_SetSelectedShader(TextureBrowser& textureBrowser, const std::string& shader);
-const char* TextureBrowser_GetSelectedShader(TextureBrowser& textureBrowser);
-
-void Scene_copyClosestTexture(SelectionTest& test)
-{
-  std::string shader;
-  if (Scene_getClosestTexture(GlobalSceneGraph(), test, shader, g_faceTextureClipboard)) {
-	TextureBrowser_SetSelectedShader(g_TextureBrowser, shader);
-  }
-}
-
-void Scene_applyClosestTexture(SelectionTest& test, const bool& project)
-{
-  UndoableCommand command("facePaintTexture");
-
-  Scene_setClosestTexture(GlobalSceneGraph(), test, TextureBrowser_GetSelectedShader(g_TextureBrowser), g_faceTextureClipboard, project);
-
-  SceneChangeNotify();
-}
-
-void Scene_pasteTextureCoordinates(SelectionTest& test)
-{
-  UndoableCommand command("facePaintTexture");
-
-  Scene_setClosestTextureCoordinates(GlobalSceneGraph(), test, g_faceTextureClipboard);
-
-  SceneChangeNotify();
-}
-
-
-
-void SelectedFaces_copyTexture()
-{
-  if(!g_SelectedFaceInstances.empty())
-  {
-    Face& face = g_SelectedFaceInstances.last().getFace();
-    face.GetTexdef(g_faceTextureClipboard._projection);
-    g_faceTextureClipboard._flags = face.getShader().m_flags;
-
-    TextureBrowser_SetSelectedShader(g_TextureBrowser, face.getShader().getShader());
-  }
-}
-
-void FaceInstance_pasteTexture(FaceInstance& faceInstance)
-{
-  faceInstance.getFace().SetTexdef(g_faceTextureClipboard._projection);
-  faceInstance.getFace().SetShader(TextureBrowser_GetSelectedShader(g_TextureBrowser));
-  faceInstance.getFace().SetFlags(g_faceTextureClipboard._flags);
-  SceneChangeNotify();
-}
+const char* TextureBrowser_GetSelectedShader(TextureBrowser& textureBrowser);*/
 
 bool SelectedFaces_empty()
 {
   return g_SelectedFaceInstances.empty();
-}
-
-void SelectedFaces_pasteTexture()
-{
-  UndoableCommand command("facePasteTexture");
-  g_SelectedFaceInstances.foreach(FaceInstance_pasteTexture);
 }
 
 void FlipTextureX() {
@@ -1698,9 +1402,6 @@ void SurfaceInspector_registerCommands()
   GlobalEventManager().addCommand("SurfaceInspector", FreeCaller<SurfaceInspector_toggleShown>());
   GlobalEventManager().addCommand("TextureTool", FreeCaller<ToggleTexTool>());
 
-  GlobalEventManager().addCommand("FaceCopyTexture", FreeCaller<SelectedFaces_copyTexture>());
-  GlobalEventManager().addCommand("FacePasteTexture", FreeCaller<SelectedFaces_pasteTexture>());
-  
 	GlobalEventManager().addCommand("CopyShader", FreeCaller<selection::algorithm::pickShaderFromSelection>());
 	GlobalEventManager().addCommand("PasteShader", FreeCaller<selection::algorithm::pasteShaderToSelection>());
 	GlobalEventManager().addCommand("PasteShaderNatural", FreeCaller<selection::algorithm::pasteShaderNaturalToSelection>());
@@ -1726,8 +1427,6 @@ void SurfaceInspector_Construct()
   g_SurfaceInspector = new SurfaceInspector;
 
   SurfaceInspector_registerCommands();
-
-  FaceTextureClipboard_setDefault();
 
   GlobalPreferenceSystem().registerPreference("SurfaceWnd", getSurfaceInspector().m_importPosition, getSurfaceInspector().m_exportPosition);
   GlobalPreferenceSystem().registerPreference("SI_SurfaceTexdef_Scale1", FloatImportStringCaller(g_si_globals.scale[0]), FloatExportStringCaller(g_si_globals.scale[0]));      
